Move js and assets folder to client files folder, also add three js magic.

--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -9,6 +9,6 @@
 	<body> 
 		<div id="canvas"></div>
 
-		<script src="js/test.js"></script>
+		<script src="js/3dmagic.js"></script>
 	</body>
 	</html>
