Minor changes in index.html

--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -1,6 +1,6 @@
 <html>
 <head> 
-	<title>Test three.js app</title>
+	<title>Awesome map application</title>
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<script src="js/three.min.js"></script>
 	<script src="js/jquery-2.0.3.min.js"></script>
@@ -10,5 +10,7 @@
 		<div id="canvas"></div>
 
 		<script src="js/3dmagic.js"></script>
+
+		<a href="websockets.html">Link text</a>
 	</body>
 	</html>
