--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -7,7 +7,9 @@
 	<script src="js/FlyControls.js"></script>
 	</head>
 	<body> 
-		<div id="canvas"></div>
+		<div id="canvas">
+			<div id="info"></div>
+		</div>
 
 		<script src="js/3dmagic.js"></script>
 
