Add MVC structure, add orbit camera, now distinguishes between click and drag.

--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -4,14 +4,21 @@
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<script src="js/three.min.js"></script>
 	<script src="js/jquery-2.0.3.min.js"></script>
+	<script src="js/jquery-ui-1.10.4.custom.min.js"></script>
 	<script src="js/FlyControls.js"></script>
+	<script src="js/OrbitControls.js"></script>
+
+	<script src="js/app.js"></script>
+	<script src="js/model/EarthMapModel.js"></script>
+	<script src="js/view/TravelLogView.js"></script>
+	<script src="js/controller/TravelLogController.js"></script>
 	</head>
 	<body> 
 		<div id="canvas">
 			<div id="info"></div>
 		</div>
 
-		<script src="js/3dmagic.js"></script>
+		<!--<script src="js/3dmagic.js"></script>-->
 
 		<a href="websockets.html">Link text</a>
 	</body>
