--- a/clientSide/test/map.html
+++ b/clientSide/test/map.html
@@ -1,16 +1,10 @@
 <html>
-<head> 
-	<title>Awesome map application</title>
-	<link rel="stylesheet" type="text/css" href="../assets/style.css">
-	<script src="../js/three.min.js"></script>
-	<script src="../js/jquery-2.0.3.min.js"></script>
-	<script src="../js/FlyControls.js"></script>
+	<head>
+		<title>My first Three.js app</title>
+		<style>canvas { width: 100%; height: 100%; }</style>
 	</head>
-	<body> 
-		<div id="canvas"></div>
-
-		<script src="test.js"></script>
-
-		<a href="websockets.html">Link text</a>
+	<body>
+		<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
+		<script src="test2.js"></script>
 	</body>
-	</html>
+</html>
