--- a/clientSide/login.html
+++ b/clientSide/login.html
@@ -37,6 +37,7 @@
             <br>
             <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="loginfunction()">Sign in</button>
           </form>
+          <button class="btn btn-primary" type="btn" ng-click="signup()">Sign up</button>
     
         </div> <!-- /container -->
 	</div>
