Small fixes, I guess.

--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -15,8 +15,14 @@
 	</head>
 	<body> 
 		<div id="canvas">
-			<div id="info"></div>
+
 		</div>
+					<div id="info">
+			<p id="totalDistance"></p>
+				<select id="visits">
+
+				</select>
+			</div>
 
 		<!--<script src="js/3dmagic.js"></script>-->
 
