--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -8,7 +8,7 @@
 	<script src="js/FlyControls.js"></script>
 	<script src="js/OrbitControls.js"></script>
 
-	<script src="js/app.js"></script>
+	<script src="js/earthApp.js"></script>
 	<script src="js/model/EarthMapModel.js"></script>
 	<script src="js/view/TravelLogView.js"></script>
 	<script src="js/controller/TravelLogController.js"></script>
