Add functionality to be able to name places.

--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -22,7 +22,10 @@
 			<p id="totalDistance"></p>
 				<select id="visits">
 
-				</select>
+				</select><br/>
+				<button id="delete">Delete place</button>
 			</div>
+
+			<div id="dialog" title="Name place">hej</div>
 	</body>
 	</html>
