Add purl.js, start trying to parse params.

--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -9,10 +9,14 @@
 	<script src="js/FlyControls.js"></script>
 	<script src="js/OrbitControls.js"></script>
 
-	<script src="js/earthApp.js"></script>
 	<script src="js/model/EarthMapModel.js"></script>
 	<script src="js/view/TravelLogView.js"></script>
 	<script src="js/controller/TravelLogController.js"></script>
+	<script src="js/purl.js"></script>
+
+	<script src="js/wsclient.js"></script>
+	
+	<script src="js/earthApp.js"></script>
 	</head>
 	<body> 
 		<div id="canvas">
