--- a/clientSide/login.html
+++ b/clientSide/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Learning AngularJS</title>
+	<title>Map App</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     <link href="bootstrap-3.1.1-dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -15,7 +15,6 @@
 
 </head>
 
-
 <body ng-app='MapApp' >
 
 <div class="text-center">
@@ -24,7 +23,8 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row" style="background: url(resources/BackgroundEarth.jpg)">
+<div id="bg">
 	<div class="container" style="width: 300px">
     	<div class="container" id="formContainer" style="width: 300px" ng-controller='loginController'>
 
@@ -37,7 +37,50 @@
             <br>
             <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="loginfunction()">Sign in</button>
           </form>
+          <br>
           <button class="btn btn-primary" type="btn" ng-click="signup()">Sign up</button>
+          <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
     
         </div> <!-- /container -->
 	</div>
