Add travel path functionality. Very beautiful.

--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -18,17 +18,29 @@
 
 	
 	<script src="js/earthApp.js"></script>
-	</head>
-	<body> 
-		<div id="canvas">
+</head>
+<body> 
+	<div id="canvas">
 
-		</div>
-					<div id="info">
-			<p id="totalDistance"></p>
-				<select id="visits">
+	</div>
+	<div id="info">
+		<p id="totalDistance"></p>
+        <select id="visits">
 
-				</select><br/>
-				<button id="delete">Delete place</button>
-			</div>
-	</body>
-	</html>
+		</select><br/>
+        <button id="delete">Delete place</button><br>
+        <br>
+        <br>
+        <select id="paths">
+
+        </select><br/>
+        <button id="addPath">Add path</button>
+
+
+		<br />
+		<br />
+
+
+	</div>
+</body>
+</html>
