--- a/clientSide/login.html
+++ b/clientSide/login.html
@@ -23,9 +23,12 @@
 </div>
 </div>
 
-<div class="row" style="background: url(resources/BackgroundEarth.jpg)">
+<div class="container" style="width:100%">
+
+<div class="row" id="login-row">
+<div class="col-md-12 col-12-1" style="background: url(resources/BackgroundEarth.jpg)">
 <div id="bg">
-	<div class="container" style="width: 300px">
+	<div class="container" style="width: 100%;height: 500px;">
     	<div class="container" id="formContainer" style="width: 300px" ng-controller='loginController'>
 
           <form class="form-signin" id="login" role="form">
@@ -39,53 +42,16 @@
           </form>
           <br>
           <button class="btn btn-primary" type="btn" ng-click="signup()">Sign up</button>
-          <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+
     
         </div> <!-- /container -->
 	</div>
 </div>
-<br>
+
+</div>
+</div>
+</div>
+
 <!--
 	<div id='content1'ng-controller='loginController1'>
 		
