--- a/clientSide/index.html
+++ b/clientSide/index.html
@@ -24,7 +24,8 @@
 
 	</div>
 	<div id="info">
-		<p id="totalDistance"></p>
+        <p id="totalDistance"></p>
+        <p id="partDistance"></p>
         <select id="visits">
 
 		</select><br/>
